Jargon 2.4.0 Release Notes
================================================================================================

Project: Jargon - IRODS Java API
Date: 07/09/2010
Release Version: 2.4.0 - This version of iRODS has been tested and updated for iRODS 2.4 compatability

================================================================================================
Requirements

-Jargon depends on Java 1.5+
-Jargon is built using Apache ANT
-Jargon has been tested against IRODS 2.1, IRODS2.2, IRODS2.3, IRODS2.4

libraries
---------  

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

* Bug 96  - IRODSFile.length() not reflecting length of file on resource

* Bug 100  - use different resource query for performance

* Several small fixes for iRODS 2.4 compatibility

* Maven POM updates to allow build with Globus toolkit

================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org